# StudyCircle

./: .gitignore  README.md
PA9/: .gitignore  CMakeLists.txt  PA9.slnx  PA9.vcxproj  main.cpp
PA9/menu/: CMakeLists.txt  menu.cpp  menu.hpp
PA9/quizard/: CMakeLists.txt  quizard.cpp  quizard.hpp
PA9/uielement/: CMakeLists.txt  uielement.hpp
PA9/uielement/core/: CMakeLists.txt  uievent.hpp  uimanager.cpp  uimanager.hpp
SMFL-3.1.0/lib/: FLAC.lib  FLACd.lib  freetype.lib  freetyped.lib  libssh2.lib  mbedcrypto.lib  mbedcryptod.lib  mbedtls.lib  mbedtlsd.lib  mbedx509.lib  mbedx509d.lib  ogg.lib  oggd.lib  sfml-audio-d.lib  sfml-audio.lib  sfml-graphics-d.lib  sfml-graphics.lib  sfml-main-d.lib  sfml-main.lib  sfml-network-d.lib  sfml-network-s.lib  sfml-network.lib  sfml-system-d.lib  sfml-system.lib  sfml-window-d.lib  sfml-window-s.lib  sfml-window.lib  vorbis.lib  vorbisd.lib  vorbisenc.lib  vorbisencd.lib  vorbisfile.lib  vorbisfiled.lib
SMFL-3.1.0/lib/cmake/MbedTLS/: MbedTLSConfigVersion.cmake
